--- a/new.html
+++ b/new.html
@@ -24,10 +24,10 @@
           together is as sweet as the fragrance of roses. Happy Rose Day, my
           love. Here's to many more petals of shared laughter and enduring love.
           <br />
-          <span class="harshit">
+          <span class="harshit💕">
             Forever Yours,
             <br />
-            Ullu</span
+            harshit❤️</span
           >
         </p>
         <div class="address">
